--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,10 +41,19 @@
   left: 0px;
 }
 
-#button {
+#playPauseButton {
   position: absolute;
   top: 20px;
-  left: 60px;
+  left: 35px;
+  border-radius: 5px;
+  background-color: transparent;
+  outline: none;
+}
+
+#resetButton {
+  position: absolute;
+  top: 20px;
+  left: 85px;
   border-radius: 5px;
   background-color: transparent;
   outline: none;
